--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 -->
 <h1>Практические задания</h1>
 <ol>
-<li><a href="task1/task1.html">Практическое задание №1</a></li>
+<li><a href="task1.html">Практическое задание №1</a></li>
 <li><a href="">Практическое задание №2</a></li>
 <a href=""><li>Практическое задание №3</li></a>
 <a href=""><li>Практическое задание №4</li></a>   
@@ -26,4 +26,5 @@
 
     
 </body>
+
 </html>
