--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Практические задания</title>
 </head>
 <body>
 <!-- 
@@ -26,5 +26,4 @@
 
     
 </body>
-
 </html>
