--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <ol>
         <li><a href="task1.html">Практическое задание №1</a>/li>
         <li><a href="task2.html">Практическое задание №2</a>/li>
+        <li><a href="task3.html">Практическое задание №3</a>/li>
+        <li><a href="task4.html">Практическое задание №4</a>/li>
         
         
     </ol>
