--- a/task3.html
+++ b/task3.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="task3.css">
 </head>
 <body>
+    <a class="back-to-main" href="index.html">На главную</a>
     <div class="cards">
        
          <div class="card card-1">
